<resources>
    <string name="app_name">Good Eats</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height</string>
    <string name="feet">Feet</string>
    <string name="inches">Inches</string>
    <string name="weight">Weight</string>
    <string name="pounds">Pounds</string>
    <string name="calculate_calorie">Calculate</string>
    <string name="activity">Exercise</string>
    <string name="calories">Calories</string>
    <string name="carbs">Carbohydrates</string>
    <string name="protein">Protein</string>
    <string name="fats">Fats</string>
    <string name="show_my_result">Show My Results</string>
    <string name="create_mealplan">Create your meal plan</string>
    <string name="number_of_meals">Number of Meals</string>

    <!-- 0 = lightly, 1 = moderate, 2 = active, 3 = very active-->
    <string-array name="meals">
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="activities">
        <item>Light</item>
        <item>Moderate</item>
        <item>Active</item>
        <item>Very Active</item>
    </string-array>

    <string name="goal">Goal</string>
    <string-array name="goals">
        <item>Maintain Weight</item>
        <item>Gain Weight</item>
        <item>Lose Weight</item>
    </string-array>

</resources>
