<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <!-- Age  -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textSize="30sp"
            android:layout_alignParentLeft="true"/>
        <EditText
            android:id="@+id/age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:hint="@string/age"/>
    </RelativeLayout>

    <!-- Gender  -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="30sp"
            android:layout_alignParentLeft="true"/>
        <RadioGroup
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true">

            <RadioButton
                android:id="@+id/gender_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:onClick="checkButton"/>

            <RadioButton
                android:id="@+id/gender_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:onClick="checkButton"/>
        </RadioGroup>
    </RelativeLayout>

    <!-- Height -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textSize="30sp"
            android:layout_alignParentLeft="true"/>
        <EditText
            android:id="@+id/height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:hint="@string/inches"/>
    </RelativeLayout>

    <!-- Weight -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textSize="30sp"
            android:layout_alignParentLeft="true"/>
        <EditText
            android:id="@+id/weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:hint="@string/pounds"/>
    </RelativeLayout>

    <!-- Activity Level -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity"
            android:textSize="30sp"
            android:layout_alignParentLeft="true"/>
        <Spinner
            android:id="@+id/activity_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true">
        </Spinner>
    </RelativeLayout>

    <!-- Goal -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal"
            android:textSize="30sp"
            android:layout_alignParentLeft="true"/>
        <Spinner
            android:id="@+id/goal_level"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true">
        </Spinner>
    </RelativeLayout>

    <Button
        android:id="@+id/calculate_calorie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_calorie"/>
    <TextView
        android:id="@+id/calorie_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate_calorie"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/create_mealplan_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_mealplan" />
</LinearLayout>